[gd_scene load_steps=16 format=3 uid="uid://dpi7a4qfsh1wm"]

[ext_resource type="Script" path="res://src/player.gd" id="1_3kq2g"]
[ext_resource type="Texture2D" uid="uid://dj6sgnsmuom8h" path="res://assets/32x32_animsheet-Sheet.png" id="2_je78k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ovwef"]
size = Vector2(16, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n1iel"]
size = Vector2(12, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jd0gw"]
size = Vector2(18, 30)

[sub_resource type="SphereMesh" id="SphereMesh_yxpap"]

[sub_resource type="Animation" id="Animation_kouuc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_04xwv"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_t7s8k"]
resource_name = "shadow"

[sub_resource type="Animation" id="Animation_pa0lq"]
resource_name = "walk_down"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_krmpl"]
resource_name = "walk_left"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_i3cwk"]
resource_name = "walk_right"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_hw7gq"]
resource_name = "walk_up"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p735k"]
_data = {
"RESET": SubResource("Animation_kouuc"),
"idle": SubResource("Animation_04xwv"),
"shadow": SubResource("Animation_t7s8k"),
"walk_down": SubResource("Animation_pa0lq"),
"walk_left": SubResource("Animation_krmpl"),
"walk_right": SubResource("Animation_i3cwk"),
"walk_up": SubResource("Animation_hw7gq")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_w62dd"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("AnimationPlayer:current_animation")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 2
script = ExtResource("1_3kq2g")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_je78k")
hframes = 16

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(0, 13)
shape = SubResource("RectangleShape2D_ovwef")

[node name="FloorChecker" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorChecker"]
position = Vector2(0, 13)
shape = SubResource("RectangleShape2D_n1iel")

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="HurtBox" type="CollisionShape2D" parent="HurtArea"]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_jd0gw")

[node name="Shadow" type="MeshInstance2D" parent="."]
modulate = Color(0.172833, 0.172833, 0.172833, 0.345098)
z_index = -1
z_as_relative = false
position = Vector2(-1.77636e-15, 13)
scale = Vector2(20, 10.345)
mesh = SubResource("SphereMesh_yxpap")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p735k")
}

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_w62dd")

[node name="Camera2D" type="Camera2D" parent="."]
